<resources>
    <string name="app_name">BackgroundVideoRecoder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="splash_title">Video Audio Recording</string>
    <string name="splash_version">Version 1.0</string>

    <string name="home_welcome">Welcome to</string>
    <string name="home_app_name">Video Audio Record</string>
    <string name="home_camera">Camera</string>
    <string name="home_audio">Audio</string>
    <string name="home_app_suggest">App Suggestions</string>

    <string name="term_of_service_title">Video Audio Recording\nWhen Screen is Off</string>
    <string name="term_of_service">Term of service</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy_policy_text">Before using Video Audio Record, you agree to our\nTerm of service and Privacy policy</string>
    <string name="privacy_policy_agree">AGREE AND CONTINUE</string>

    <string name="audio_record_title">Audio Record</string>


    <string name="video_record_title">Video Record</string>
    <string name="video_record_page_record">RECORD</string>
    <string name="video_record_page_schedule">SCHEDULE</string>
    <string name="video_record_configuration_title">Camera Information</string>
    <string name="video_record_configuration_camera">Camera</string>
    <string name="video_record_configuration_rotation">Rotate video</string>
    <string name="video_record_configuration_quality">Video quality</string>
    <string name="video_record_configuration_zoom">Zoom scale</string>
    <string name="video_record_configuration_front">Front</string>
    <string name="video_record_configuration_back">Back</string>
    <string name="video_record_configuration_duration">Record Duration</string>
    <string name="video_record_configuration_video_time">Time per video</string>
    <string name="video_record_configuration_preview">Preview mode</string>
    <string name="video_record_configuration_flash">Flash</string>
    <string name="video_record_configuration_sound">Sound</string>
    <string name="video_record_configuration_start">Start</string>
    <string name="video_record_configuration_stop">Stop</string>
    <string name="video_record_configuration_un_limit">Unlimit</string>
    <string name="video_record_configuration_no_split">No split</string>
    <plurals name="video_record_configuration_minute">
        <item quantity="one">%d Minute</item>
        <item quantity="other">%d Minutes</item>
    </plurals>
    <array name="camera_facing">
        <item>Front</item>
        <item>Back</item>
    </array>
    <array name="camera_orientation">
        <item>Auto</item>
        <item>Portrait</item>
        <item>Landscape</item>
    </array>
    <string name="video_record_time_zero">00:00:00</string>
    <string name="video_record_notification_title">Video record is running</string>
    <string name="audio_record_notification_title">Audio record is running</string>
    <string name="video_record_notification_prefix">Video Record •</string>
    <string name="audio_record_notification_prefix">Audio Record •</string>
    <string name="video_record_complete_prefix">Record video complete</string>

    <string name="video_record_schedule_title">Schedule automatically video recording</string>
    <string name="video_record_schedule_date">Date</string>
    <string name="video_record_schedule_time">Time</string>
    <string name="video_record_schedule_set">Set Schedule</string>
    <string name="video_record_schedule_notify_title">Video record schedule</string>
    <string name="video_record_schedule_invalidate_time">Timer must bigger than current time</string>
    <string name="video_record_schedule_video_title">Video record will start at:</string>
    <string name="video_record_schedule_audio_title">Audio record will start at:</string>
    <string name="video_record_schedule_cancel_message">Do you want to cancel this schedule</string>
    <string name="video_record_schedule_cancel_progress_message">There is audio, video or schedule in progress. Would you like to stop it?</string>
    <string name="video_record_schedule_notification_title">Video record will start at:</string>

    //Audio Record
    <string name="record">Record</string>
    <string name="audio_information">Audio information</string>
    <string name="record_quality">Record quality</string>
    <string name="record_mode">Record mode</string>
    <string name="abort">Abort</string>
    <string name="save">Save</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="mode">Mode</string>
    <string name="record_duration">Record duration</string>
    <string name="mute_ring_msg">Mute ring when recording</string>
    <string name="confirm">Confirm?</string>
    <string name="abort_msg">Abort recording will not be saved.</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="mode_mono">Voice (mono)</string>
    <string name="mode_stereo">Music (stereo)</string>
    <string name="audio_record_is_running">Audio record is running</string>
    <string name="video_record_is_running">Video record is running</string>
    <string name="recording_alert">Recording…</string>
    <string name="recording_stop">Recording stop</string>
    <string name="mute_ring_describe">No ringtone on recording</string>

    //Audio Schedule
    <string name="schedule">Schedule</string>
    <string name="schedule_audio_record">Schedule audio record</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="set_schedule">Set Schedule</string>

    <array name="record_quality">
        <item>@string/high</item>
        <item>@string/medium</item>
        <item>@string/low</item>
    </array>

    <array name="record_mode">
        <item>@string/mode_mono</item>
        <item>@string/mode_stereo</item>
    </array>

    <string name="setting_title">Settings</string>
    <string name="setting_general">GENERAL</string>
    <string name="setting_video">VIDEO</string>
    <string name="setting_audio">AUDIO</string>
    <string name="setting_about">ABOUT</string>
    <string name="setting_general_free_storage">Check free storage</string>
    <string name="setting_general_free_pattern">%s free of %s</string>
    <string name="setting_general_battery_title">Check battery low</string>
    <string name="setting_general_battery_text">Check battery status level</string>
    <string name="setting_general_app_lock_title">App Lock</string>
    <string name="setting_general_app_lock_text">Lock your app when exit</string>
    <string name="setting_general_storage_path">Storage path</string>
    <string name="setting_general_notification_title">Notification bar</string>
    <string name="setting_general_notification_text">Notification when app running</string>
    <array name="notification_importance">
        <item>High</item>
        <item>Low</item>
    </array>




    //app lock
    <string name="app_lock_delete">DELETE</string>
    <string name="app_lock_incorrect_passcode">Incorrect Passcode</string>
    <string name="app_lock_set_passcode_success">Set passcode successful</string>
    <string name="app_lock_set_passcode_failed">Set passcode failed</string>
    <string name="app_lock_create_passcode">Create passcode</string>
    <string name="app_lock_confirm_passcode">Enter your passcode again</string>
    <string name="app_lock_unlock_app">Enter your passcode to unlock</string>
    <string name="app_lock_remove_passcode">Enter your passcode to remove</string>

    //Other
    <string name="grant_permission">Please grant the application permission to continue using the app</string>
    <string name="goto_settings">You must approve this permission in Permissions in the app settings on your device to continue using the app.</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="empty">Empty</string>
    <string name="dismiss">Dismiss</string>
    <string name="tap_to_open_now">Tap to open now</string>
    <string name="low_battery_title">Low Battery</string>
    <string name="low_battery_text">Warning! 10% of battery remaining</string>
    <string name="low_storage_title">Storage space running out</string>
    <string name="low_storage_text">Your memory has been used more than 90%</string>
    <string name="internal_storage">internal storage</string>
    <string name="sd_card">SD Card</string>
    <string name="save_to">Save to</string>
    <string name="use_this_folder">Use this folder</string>
    <string name="title_dialog_permission_sdcard">Permission to operate SD Card</string>
    <string name="msg_giant_sd_card">You must perform the certain steps to grant SD Card access rights</string>
    <string name="unable_create_viewmodel">Unable create ViewModel</string>

    //Setting
    <string name="privacy_policy_describe">A privacy policy is a statement or legal document</string>
    <string name="term_of_service_describe">Term of service are the legal agreements</string>
    <string name="have_a_question">Have a question</string>
    <string name="contact_us">Contact us</string>
    <string name="rate_us">Rate us</string>
    <string name="rate_us_describe">You are worth for the application</string>
    <string name="share_app">Share app</string>
    <string name="share_app_with_friend">Share app with friend</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="extra_email">trieuvn91@gmail.com</string>
    <string name="extra_subject">Feedback on using the application</string>
    <string name="extra_text">Hi! Developer. In the process of using the application, I have comments about the application:</string>

    //My file
    <string name="my_file_title">My File</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="empty_file">There\'s nothing here.</string>
    <string name="duration_size_my_file">%s - %s</string>
    <string name="today">Today</string>
    <string name="audio_mime_type">audio/mpeg</string>
    <string name="select">Select</string>
    <string name="open_with">Open with</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="invalid_filename">This name have special character, please try again!</string>
    <string name="empty_file_name">Please enter file name!</string>
    <string name="select_all">Select all</string>
    <string name="sort_by">Sort by</string>
    <string name="selected">Selected</string>
    <string name="sort_by_newest_date_first">Newest date first</string>
    <string name="sort_by_oldest_date_first">Oldest date first</string>
    <string name="sort_by_largest_first">Largest first</string>
    <string name="sort_by_smallest_first">Smallest first</string>
    <string name="sort_by_name_az">Name A-Z</string>
    <string name="sort_by_name_za">Name Z-A</string>

    <plurals name="delete_file_msg">
        <item quantity="one">Do you want delete this %s file</item>
        <item quantity="other">Do you want delete this %s files</item>
    </plurals>
    <string name="cannot_open_mp4">Cannot open file mp4</string>
    <array name="sort_by">
        <item>@string/sort_by_newest_date_first</item>
        <item>@string/sort_by_oldest_date_first</item>
        <item>@string/sort_by_largest_first</item>
        <item>@string/sort_by_smallest_first</item>
        <item>@string/sort_by_name_az</item>
        <item>@string/sort_by_name_za</item>
    </array>

    //notification
    <string name="tap_to_open">Tap to open now</string>

</resources>