<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_sheet"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="@dimen/dp_20">

        <TextView
            android:id="@+id/tvTitle"
            android:text="@string/confirm"
            style="@style/TextDialogConfirmTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMsg"
            style="@style/TextDialogMsg"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/btnNegative"
                style="@style/TextDialog1"
                android:layout_marginEnd="50dp"
                android:background="@drawable/bg_button_cancel"
                android:text="@string/cancel" />

            <TextView
                android:id="@+id/btnPositive"
                style="@style/TextDialog1"
                android:background="@drawable/bg_button_start"
                android:text="@string/ok"
                android:textColor="@color/md_white_1000" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>