<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="schedule"
            type="boolean" />

        <variable
            name="scheduleTime"
            type="Long" />

        <variable
            name="isRecording"
            type="boolean" />

        <variable
            name="configuration"
            type="com.hola360.backgroundvideorecoder.ui.record.video.model.VideoRecordConfiguration" />

        <import type="android.view.View" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/home_v_margin">

            <TextView
                style="@style/TextRecordTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/video_record_schedule_title" />

            <LinearLayout
                android:id="@+id/date"
                style="@style/RecordLayoutStyle1"
                android:clickable="@{!schedule}">

                <LinearLayout style="@style/RecordLayoutStyle2">

                    <TextView
                        style="@style/TextRecordProperties1"
                        android:text="@string/video_record_schedule_date" />

                    <TextView
                        style="@style/TextRecordProperties2"
                        android:setScheduleDate="@{scheduleTime}"
                        android:textColor="@{schedule? @color/un_clickable: @color/colorAccent}" />

                </LinearLayout>

                <View style="@style/RecordDivineStyle" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/time"
                style="@style/RecordLayoutStyle1"
                android:clickable="@{!schedule}">

                <LinearLayout style="@style/RecordLayoutStyle2">

                    <TextView
                        style="@style/TextRecordProperties1"
                        android:text="@string/video_record_schedule_time" />

                    <TextView
                        style="@style/TextRecordProperties2"
                        android:setScheduleTime="@{scheduleTime}"
                        android:textColor="@{schedule? @color/un_clickable: @color/colorAccent}" />

                </LinearLayout>

                <View style="@style/RecordDivineStyle" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/camera"
                style="@style/RecordLayoutStyle1"
                android:clickable="@{!isRecording}">

                <LinearLayout style="@style/RecordLayoutStyle2">

                    <TextView
                        style="@style/TextRecordProperties1"
                        android:text="@string/video_record_configuration_camera" />

                    <TextView
                        style="@style/TextRecordProperties2"
                        android:text="@{configuration.back? @string/video_record_configuration_back: @string/video_record_configuration_front}"
                        android:textColor="@{isRecording? @color/un_clickable: @color/colorAccent}" />

                </LinearLayout>

                <View style="@style/RecordDivineStyle" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/recordDuration"
                style="@style/RecordLayoutStyle1"
                android:clickable="@{!isRecording}">

                <LinearLayout style="@style/RecordLayoutStyle2">

                    <TextView
                        style="@style/TextRecordProperties1"
                        android:text="@string/video_record_configuration_duration" />

                    <TextView
                        style="@style/TextRecordProperties2"
                        videoRecordDuration="@{configuration.totalTime}"
                        android:textColor="@{isRecording? @color/un_clickable: @color/colorAccent}" />

                </LinearLayout>

                <View style="@style/RecordDivineStyle" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/intervalTime"
                style="@style/RecordLayoutStyle1"
                android:clickable="@{!isRecording}">

                <LinearLayout style="@style/RecordLayoutStyle2">

                    <TextView
                        style="@style/TextRecordProperties1"
                        android:text="@string/video_record_configuration_video_time" />

                    <TextView
                        style="@style/TextRecordProperties2"
                        timePerVideo="@{configuration.timePerVideo}"
                        android:textColor="@{isRecording? @color/un_clickable: @color/colorAccent}" />

                </LinearLayout>

                <View style="@style/RecordDivineStyle" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/flash"
                style="@style/RecordLayoutStyle1"
                android:clickable="@{!isRecording}">

                <LinearLayout style="@style/RecordLayoutStyle2">

                    <TextView
                        style="@style/TextRecordProperties1"
                        android:text="@string/video_record_configuration_flash" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/flashSwitch"
                        android:layout_width="@dimen/record_switch_height"
                        android:layout_height="@dimen/record_switch_height"
                        android:checked="@{configuration.flash}"
                        android:thumb="@drawable/bg_switch_thumb"
                        app:track="@drawable/bg_switch" />

                </LinearLayout>

                <View style="@style/RecordDivineStyle" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sound"
                style="@style/RecordLayoutStyle1"
                android:clickable="@{!isRecording}">

                <LinearLayout style="@style/RecordLayoutStyle2">

                    <TextView
                        style="@style/TextRecordProperties1"
                        android:text="@string/video_record_configuration_sound" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/soundSwitch"
                        android:layout_width="@dimen/record_switch_height"
                        android:layout_height="@dimen/record_switch_height"
                        android:checked="@{configuration.sound}"
                        android:thumb="@drawable/bg_switch_thumb"
                        app:track="@drawable/bg_switch" />

                </LinearLayout>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/setSchedule"
                    style="@style/TextRecordButton"
                    android:layout_gravity="center_horizontal|top"
                    android:text="@string/video_record_schedule_set"
                    android:visibility="@{schedule?View.GONE: View.VISIBLE}" />

                <include
                    android:id="@+id/scheduleCard"
                    layout="@layout/layout_schedule_record"
                    android:visibility="@{schedule ?View.VISIBLE: View.GONE}" />

            </FrameLayout>


        </LinearLayout>
    </ScrollView>

</layout>